name:                froggedtv-vods
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ptitfred/ftv-vods#readme
license:             BSD3
license-file:        LICENSE
author:              Frédéric Menou
maintainer:          example@example.com
copyright:           2016 Frédéric Menou
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Liquipedia
                     , Helpers
                     , Matcher
                     , Model
                     , YouTube
                     , Secrets
  other-modules:       YouTube.Client
                     , YouTube.Commons
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , aeson
                     , edit-distance
                     , parsec
                     , rdf4h
                     , text
                     , split
                     , time
                     , process
                     , transformers
                     , warp
                     , wai
                     , scotty
                     , bytestring
                     , case-insensitive
                     , dbus
                     , vector
                     , containers
                     , random
                     , cryptonite
                     , http-types
  default-language:    Haskell2010

executable ftv-cli
  hs-source-dirs:      app
  main-is:             CLI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , froggedtv-vods
  default-language:    Haskell2010

test-suite froggedtv-vods-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , froggedtv-vods
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ptitfred/ftv-vods
